# BagFromImages

./: CMakeLists.txt  README.md  main.cc  manifest.xml
